added uml panel

--- a/src-tauri/permissions/app-commands.toml
+++ b/src-tauri/permissions/app-commands.toml
@@ -1,4 +1,8 @@
 [[permission]]
 identifier = "allow-app-commands"
 description = "Allow the frontend to use app commands."
-commands.allow = ["list_project_tree", "read_text_file", "write_text_file"]
+commands.allow = [
+  "list_project_tree",
+  "read_text_file",
+  "write_text_file"
+]
