--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "prepare:jdk": "node scripts/select-jdk.js",
     "tauri dev": "tauri dev",
     "tauri build": "tauri build"
   },
