temporary disabled installer creation in tauri build

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "prepare:jdk": "node scripts/select-jdk.js",
     "build:parser": "cd java-parser && gradle copyBridgeJar",
+    "tauri": "tauri",
     "tauri dev": "tauri dev",
     "tauri build": "tauri build"
   },
