--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "unimozer-next",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "lint": "eslint .",
     "prepare:jdk": "node scripts/select-jdk.js",
     "build:parser": "cd java-parser && gradle copyBridgeJar",
+    "sync:version": "node scripts/sync-version.js",
     "tauri": "tauri",
     "tauri dev": "tauri dev",
     "tauri build": "tauri build"
@@ -19,20 +21,27 @@
     "@tauri-apps/plugin-dialog": "^2.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@tauri-apps/cli": "^2.5.3",
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/react": "^19.2.9",
+    "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.35.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^17.2.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
+    "typescript-eslint": "^8.44.0",
     "typescript": "^5.6.3",
     "vite": "^7.3.1"
   }
