--- a/java-parser/build.gradle
+++ b/java-parser/build.gradle
@@ -4,11 +4,15 @@ plugins {
 }
 
 group = 'com.unimozer'
-version = '0.1.0'
+version = '0.1.1'
 
 java {
   sourceCompatibility = JavaVersion.VERSION_17
   targetCompatibility = JavaVersion.VERSION_17
+}
+
+tasks.withType(JavaCompile).configureEach {
+  options.compilerArgs << "-Xlint:unchecked"
 }
 
 repositories {
