--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unimozer-next",
   "private": true,
-  "version": "0.2.1",
+  "version": "0.2.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,6 +18,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@tauri-apps/api": "^2.5.3",
     "@tauri-apps/plugin-dialog": "^2.3.2",
+    "@radix-ui/react-menubar": "^1.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "react": "^19.2.4",
