--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unimozer-next",
   "private": true,
-  "version": "0.2.2",
+  "version": "0.2.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-menubar": "^1.1.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@tauri-apps/api": "^2.5.3",
     "@tauri-apps/plugin-dialog": "^2.3.2",
-    "@radix-ui/react-menubar": "^1.1.4",
+    "@tauri-apps/plugin-window-state": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "react": "^19.2.4",
@@ -27,8 +30,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
-    "@tauri-apps/cli": "^2.5.3",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tauri-apps/cli": "^2.5.3",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
@@ -41,8 +44,8 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
-    "typescript-eslint": "^8.44.0",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.44.0",
     "vite": "^7.3.1"
   }
 }
