--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unimozer-next",
   "private": true,
-  "version": "0.2.4",
+  "version": "0.4.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,6 +19,7 @@
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-menubar": "^1.1.4",
+    "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-switch": "^1.2.6",
     "@tauri-apps/api": "^2.5.3",
     "@tauri-apps/plugin-dialog": "^2.3.2",
@@ -26,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "react": "^19.2.4",
+    "react-color": "^2.19.3",
     "react-dom": "^19.2.4",
     "tailwind-merge": "^3.4.0"
   },
