--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-menubar": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-slider": "^1.2.6",
     "@radix-ui/react-switch": "^1.2.6",
     "@tauri-apps/api": "^2.5.3",
     "@tauri-apps/plugin-dialog": "^2.3.2",
@@ -37,7 +38,7 @@
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9.35.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^7.0.1",
