--- a/src-tauri/permissions/app-commands.toml
+++ b/src-tauri/permissions/app-commands.toml
@@ -16,5 +16,6 @@ commands.allow = [
   "ls_stop",
   "ls_did_open",
   "ls_did_change",
-  "ls_did_close"
+  "ls_did_close",
+  "ls_format_document"
 ]
