--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,6 +12,7 @@ tauri-build = { version = "2.5.3", features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri = { version = "2.5.3", features = [] }
+tauri-plugin-clipboard-manager = "2"
 tauri-plugin-dialog = "2.3.2"
 
 [features]
