add class wizard, add field wizard

--- a/src-tauri/permissions/app-commands.toml
+++ b/src-tauri/permissions/app-commands.toml
@@ -6,7 +6,10 @@ commands.allow = [
   "parse_uml_graph",
   "read_text_file",
   "write_text_file",
+  "remove_text_file",
   "export_netbeans_project",
+  "add_field_to_class",
+  "create_netbeans_project",
   "compile_project",
   "run_main",
   "cancel_run",
