--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unimozer-next",
   "private": true,
-  "version": "0.5.0",
+  "version": "0.6.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,11 +16,14 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-context-menu": "^2.2.16",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-menubar": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slider": "^1.2.6",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@tauri-apps/api": "^2.5.3",
     "@tauri-apps/plugin-clipboard-manager": "^2.0.0",
     "@tauri-apps/plugin-dialog": "^2.3.2",
