--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "build:parser": "cd java-parser && gradle copyBridgeJar",
+    "sync:themes": "node scripts/sync-monaco-themes.cjs",
     "tauri": "tauri",
     "tauri dev": "tauri dev",
     "tauri build": "tauri build"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
-    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-menubar": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.5",
@@ -30,6 +31,7 @@
     "@tauri-apps/plugin-window-state": "^2.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "monaco-themes": "^0.4.8",
     "react": "^19.2.4",
     "react-color": "^2.19.3",
     "react-dom": "^19.2.4",
