--- a/src-tauri/permissions/app-commands.toml
+++ b/src-tauri/permissions/app-commands.toml
@@ -13,6 +13,11 @@ commands.allow = [
   "add_method_to_class",
   "create_netbeans_project",
   "compile_project",
+  "jshell_start",
+  "jshell_stop",
+  "jshell_eval",
+  "jshell_inspect",
+  "jshell_vars",
   "run_main",
   "cancel_run",
   "read_settings",
