--- a/src-tauri/permissions/app-commands.toml
+++ b/src-tauri/permissions/app-commands.toml
@@ -27,5 +27,6 @@ commands.allow = [
   "ls_did_open",
   "ls_did_change",
   "ls_did_close",
-  "ls_format_document"
+  "ls_format_document",
+  "take_startup_logs"
 ]
