--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^19.2.4",
     "react-color": "^2.19.3",
     "react-dom": "^19.2.4",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
