fixes after code review

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
+    "cargo:check": "cargo check --manifest-path src-tauri/Cargo.toml",
     "lint": "eslint .",
     "build:parser": "cd java-parser && gradle copyBridgeJar",
     "build:jshell": "cd jshell-bridge && gradle copyBridgeJar",
