--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0"
 tauri = { version = "2.10.2", features = [] }
 tauri-plugin-clipboard-manager = "2.3.2"
 tauri-plugin-dialog = "2.6.0"
+zip = "2.2.2"
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
