--- a/src-tauri/permissions/app-commands.toml
+++ b/src-tauri/permissions/app-commands.toml
@@ -10,6 +10,7 @@ commands.allow = [
   "remove_text_file",
   "open_packed_project",
   "create_packed_project",
+  "create_scratch_project",
   "save_packed_project",
   "export_netbeans_project",
   "add_field_to_class",
