--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "unimozer-next"
-version = "0.8.1"
+version = "0.9.0"
 description = "Unimozer Next"
-authors = ["You"]
+authors = ["Laurent Haan"]
 edition = "2021"
 
 [build-dependencies]
