added structogram png export, right click menu, color settings

--- a/src-tauri/permissions/app-commands.toml
+++ b/src-tauri/permissions/app-commands.toml
@@ -26,6 +26,7 @@ commands.allow = [
   "run_main",
   "cancel_run",
   "read_settings",
+  "read_default_settings",
   "write_settings",
   "ls_start",
   "ls_stop",
