added folder project and .umz file reload from disk

--- a/src-tauri/permissions/app-commands.toml
+++ b/src-tauri/permissions/app-commands.toml
@@ -8,7 +8,10 @@ commands.allow = [
   "write_text_file",
   "write_binary_file",
   "remove_text_file",
+  "folder_java_files_change_token",
+  "file_change_token",
   "open_packed_project",
+  "reload_packed_project_in_place",
   "create_packed_project",
   "create_scratch_project",
   "save_packed_project",
