--- a/.github/workflows/windows-manual-build.yml
+++ b/.github/workflows/windows-manual-build.yml
@@ -41,9 +41,16 @@ jobs:
         with:
           distribution: temurin
           java-version: "17"
+          cache: gradle
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
+
+      - name: Restore Rust build cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: |
+            src-tauri -> target
 
       - name: Restore resource archive cache
         uses: actions/cache@v4
