--- a/.github/workflows/windows-manual-build.yml
+++ b/.github/workflows/windows-manual-build.yml
@@ -1,6 +1,10 @@
 name: Windows Build (Manual)
 
 on:
+  push:
+    tags:
+      - "v*"
+      - "*.*.*"
   workflow_dispatch:
     inputs:
       ref:
@@ -28,7 +32,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.ref }}
+          ref: ${{ github.event.inputs.ref || github.ref }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
