--- a/.gitignore
+++ b/.gitignore
@@ -55,11 +55,12 @@ Thumbs.db
 # local
 *.local
 
-# Example project: keep sources/docs, ignore generated workspace files
-/examples/jshell-smoke-project/build/
-/examples/jshell-smoke-project/.project
-/examples/jshell-smoke-project/.classpath
-/examples/jshell-smoke-project/unimozer.json
+# Example projects: keep sources/docs, ignore generated workspace files
+/examples/**/build/
+/examples/**/.project
+/examples/**/.classpath
+/examples/**/unimozer.json
+/examples/**/*.class
 
 # icons/build output
 /src-tauri/icons/*.png
