--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ Thumbs.db
 # icons/build output
 /src-tauri/icons/*.png
 /src-tauri/icons/*.icns
+!/src-tauri/icons/32x32.png
+!/src-tauri/icons/128x128.png
+!/src-tauri/icons/256x256.png
+!/src-tauri/icons/icon.icns
