--- a/.github/workflows/macos-release-build.yml
+++ b/.github/workflows/macos-release-build.yml
@@ -11,6 +11,10 @@ on:
         description: Override and publish GitHub release for this run
         required: false
         default: "false"
+      release_tag:
+        description: Tag name to publish (e.g. v0.10.5). Leave empty to skip release publishing.
+        required: false
+        default: ""
 
 permissions:
   contents: write
@@ -232,9 +236,9 @@ jobs:
           if-no-files-found: error
 
       - name: Publish GitHub release
-        if: ${{ vars.PUBLISH_GH_RELEASE == 'true' || github.event.inputs.publish_release == 'true' }}
+        if: ${{ (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') && vars.PUBLISH_GH_RELEASE == 'true') || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish_release == 'true' && github.event.inputs.release_tag != '') }}
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref_name }}
+          tag_name: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.release_tag || github.ref_name }}
           files: |
             src-tauri/target/${{ matrix.rust_target }}/release/bundle/**/*.dmg
