--- a/.github/workflows/windows-release-build.yml
+++ b/.github/workflows/windows-release-build.yml
@@ -230,15 +230,15 @@ jobs:
           $version = $versionMatch.Groups[1].Value
           $releaseTag = "${{ steps.release_meta.outputs.tag_name }}"
           $releaseBase = "https://github.com/${{ github.repository }}/releases/download/$releaseTag"
+          $releaseAssetDir = "release-assets"
+          New-Item -ItemType Directory -Force -Path $releaseAssetDir | Out-Null
 
-          $nsisCandidates = Get-ChildItem "src-tauri/target/release/bundle/nsis" -File | Where-Object {
-            ($_.Name -match '\.exe($|\.zip$)') -and (Test-Path "$($_.FullName).sig")
-          }
-          $msiCandidates = Get-ChildItem "src-tauri/target/release/bundle/msi" -File | Where-Object {
-            ($_.Name -match '\.msi($|\.zip$)') -and (Test-Path "$($_.FullName).sig")
-          }
-          $nsisFile = $nsisCandidates | Sort-Object @{ Expression = { if ($_.Name -match '\.exe$') { 0 } else { 1 } } }, Name | Select-Object -First 1
-          $msiFile = $msiCandidates | Sort-Object @{ Expression = { if ($_.Name -match '\.msi$') { 0 } else { 1 } } }, Name | Select-Object -First 1
+          $nsisFile = Get-ChildItem "src-tauri/target/release/bundle/nsis" -File | Where-Object {
+            ($_.Name -match '\.exe$') -and (Test-Path "$($_.FullName).sig")
+          } | Select-Object -First 1
+          $msiFile = Get-ChildItem "src-tauri/target/release/bundle/msi" -File | Where-Object {
+            ($_.Name -match '\.msi$') -and (Test-Path "$($_.FullName).sig")
+          } | Select-Object -First 1
           if ($null -eq $nsisFile) { throw "NSIS bundle not found." }
           if ($null -eq $msiFile) { throw "MSI bundle not found." }
 
@@ -247,10 +247,22 @@ jobs:
           if (!(Test-Path $nsisSigPath)) { throw "NSIS signature not found: $nsisSigPath" }
           if (!(Test-Path $msiSigPath)) { throw "MSI signature not found: $msiSigPath" }
 
+          $nsisReleaseName = "UnimozerNext_${version}_x64-setup.exe"
+          $msiReleaseName = "UnimozerNext_${version}_x64-setup.msi"
+          $nsisReleasePath = Join-Path $releaseAssetDir $nsisReleaseName
+          $msiReleasePath = Join-Path $releaseAssetDir $msiReleaseName
+          $nsisReleaseSigPath = "$nsisReleasePath.sig"
+          $msiReleaseSigPath = "$msiReleasePath.sig"
+
+          Copy-Item -Path $nsisFile.FullName -Destination $nsisReleasePath -Force
+          Copy-Item -Path $msiFile.FullName -Destination $msiReleasePath -Force
+          Copy-Item -Path $nsisSigPath -Destination $nsisReleaseSigPath -Force
+          Copy-Item -Path $msiSigPath -Destination $msiReleaseSigPath -Force
+
           $nsisSig = (Get-Content $nsisSigPath -Raw).Trim()
           $msiSig = (Get-Content $msiSigPath -Raw).Trim()
-          $nsisAssetName = [System.Uri]::EscapeDataString($nsisFile.Name)
-          $msiAssetName = [System.Uri]::EscapeDataString($msiFile.Name)
+          $nsisAssetName = [System.Uri]::EscapeDataString($nsisReleaseName)
+          $msiAssetName = [System.Uri]::EscapeDataString($msiReleaseName)
 
           New-Item -ItemType Directory -Force -Path "updater-manifests" | Out-Null
 
@@ -298,14 +310,10 @@ jobs:
         with:
           name: windows-installers
           path: |
-            src-tauri/target/release/bundle/msi/*.msi
-            src-tauri/target/release/bundle/msi/*.msi.zip
-            src-tauri/target/release/bundle/msi/*.msi.sig
-            src-tauri/target/release/bundle/msi/*.msi.zip.sig
-            src-tauri/target/release/bundle/nsis/*.exe
-            src-tauri/target/release/bundle/nsis/*.exe.zip
-            src-tauri/target/release/bundle/nsis/*.exe.sig
-            src-tauri/target/release/bundle/nsis/*.exe.zip.sig
+            release-assets/UnimozerNext_*_x64-setup.exe
+            release-assets/UnimozerNext_*_x64-setup.exe.sig
+            release-assets/UnimozerNext_*_x64-setup.msi
+            release-assets/UnimozerNext_*_x64-setup.msi.sig
             updater-manifests/latest-windows-x86_64-nsis.json
             updater-manifests/latest-windows-x86_64-msi.json
           if-no-files-found: error
@@ -318,13 +326,9 @@ jobs:
           prerelease: ${{ steps.release_meta.outputs.is_prerelease == 'true' }}
           make_latest: ${{ steps.release_meta.outputs.is_prerelease != 'true' }}
           files: |
-            src-tauri/target/release/bundle/msi/*.msi
-            src-tauri/target/release/bundle/msi/*.msi.zip
-            src-tauri/target/release/bundle/msi/*.msi.sig
-            src-tauri/target/release/bundle/msi/*.msi.zip.sig
-            src-tauri/target/release/bundle/nsis/*.exe
-            src-tauri/target/release/bundle/nsis/*.exe.zip
-            src-tauri/target/release/bundle/nsis/*.exe.sig
-            src-tauri/target/release/bundle/nsis/*.exe.zip.sig
+            release-assets/UnimozerNext_*_x64-setup.exe
+            release-assets/UnimozerNext_*_x64-setup.exe.sig
+            release-assets/UnimozerNext_*_x64-setup.msi
+            release-assets/UnimozerNext_*_x64-setup.msi.sig
             updater-manifests/latest-windows-x86_64-nsis.json
             updater-manifests/latest-windows-x86_64-msi.json
