dummy upgrade target version 0.10.12

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unimozer-next"
-version = "0.10.11-7"
+version = "0.10.12"
 description = "Unimozer Next"
 authors = ["Laurent Haan"]
 edition = "2021"
