--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unimozer-next",
   "private": true,
-  "version": "0.10.11-7",
+  "version": "0.10.12",
   "type": "module",
   "scripts": {
     "dev": "vite",
