--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:parser": "cd java-parser && gradle copyBridgeJar",
     "build:jshell": "cd jshell-bridge && gradle copyBridgeJar",
     "sync:themes": "node scripts/sync-monaco-themes.cjs",
+    "assets:logo-runtime": "node scripts/generate-logo-runtime-assets.mjs",
     "tauri": "tauri",
     "tauri dev": "tauri dev",
     "tauri build": "tauri build"
@@ -56,6 +57,7 @@
     "eslint-plugin-react-refresh": "^0.5.0",
     "globals": "^17.3.0",
     "postcss": "^8.4.41",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
